Fixed some overflow issues on mobile

--- a/frontend/src/App.module.scss
+++ b/frontend/src/App.module.scss
@@ -19,9 +19,3 @@
     row-gap: 2rem;
   }
 }
-
-@media (max-width: $media-width) {
-  .column-wrapper {
-    overflow: hidden;
-  }
-}
